--- a/next-ui/package.json
+++ b/next-ui/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "antd": "^5.17.0",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "sass": "^1.77.1"
   },
   "devDependencies": {
