--- a/next-ui/package.json
+++ b/next-ui/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@reduxjs/toolkit": "^2.2.4",
     "antd": "^5.17.0",
     "clsx": "^2.1.1",
