--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3.8'
 
 services:
   next-ui:
-    # depends_on:
-    #   - backend
-    build: 
+    depends_on:
+      - backend
+    build:
       context: ./next-ui
       dockerfile: Dockerfile
     ports:
@@ -23,31 +23,26 @@ services:
         - path: ./next-ui/.env.dev
           target: /app/.env.dev
           action: sync
-  
-  # mysql-db:
-  #   image: mysql@latest
-  #   volumes:
-  #     - code://data/mysql
-  #   ports:
-  #     - 3308:3306
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: root
-  #     MYSQL_DATABASE: htql
-  #   restart: always
-  
-  # backend:
-  #   depends_on:
-  #     - mysql-db
-  #   build: 
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 8080:8080
-  #   develop:
-  #     watch:
-  #       - path: ./backend
-    
 
+  mysql-db:
+    image: mysql:latest
+    volumes:
+      - code://data/mysql
+    ports:
+      - 3308:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: htql
+    restart: always
+
+  backend:
+    depends_on:
+      - mysql-db
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - 8080:8080
 
 volumes:
   code:
