--- a/next-ui/package.json
+++ b/next-ui/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.77.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
